--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" :  "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
